context and header

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"vite": "^7.3.1"
 	},
 	"dependencies": {
+		"@fontsource/inter": "^5.2.8",
 		"convex": "^1.31.7",
-		"convex-svelte": "^0.0.12"
+		"convex-svelte": "^0.0.12",
+		"tailwind-merge": "^3.4.0"
 	}
 }
