--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"@fontsource/inter": "^5.2.8",
 		"convex": "^1.31.7",
 		"convex-svelte": "^0.0.12",
+		"lucide-svelte": "^0.563.0",
+		"marked": "^17.0.1",
 		"tailwind-merge": "^3.4.0"
 	}
 }
