--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
 	"trailingComma": "none",
 	"bracketSpacing": true,
 	"printWidth": 100,
+	"semi": false,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
