--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "concurrently \"vite dev\" \"convex dev\"",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -18,7 +18,6 @@
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/vite": "^4.1.18",
-		"concurrently": "^9.2.1",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
@@ -30,10 +29,9 @@
 	},
 	"dependencies": {
 		"@fontsource/inter": "^5.2.8",
-		"convex": "^1.31.7",
-		"convex-svelte": "^0.0.12",
 		"lucide-svelte": "^0.563.0",
 		"marked": "^17.0.1",
+		"pocketbase": "^0.26.8",
 		"tailwind-merge": "^3.4.0"
 	}
 }
